--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
      <h1>Hi Friend</h1>
      <h3>I am Sai Arjun</h3>
 
-<embed type="text/html" src="https://mail.google.com/chat/u/0/#chat/welcome" width="500" height="200">
-<p1>you can mail me at-</p1>
- ID: <p><a href="mail">saiarjun1116@gmail.com</a></p>
+<p><a href="https://mail.google.com/chat/u/0/#chat/welcom"><p><a href="click here"</a></p>
+<p><a href="mail">ID:_saiarjun1116@gmail.com</a></p>
 
 
 <p><a href="mail">All_rights_reserved_2022</a></p>
