--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
      <h1>Hi Friend</h1>
      <h3>I am Sai Arjun</h3>
 
-<p><a href="https://mail.google.com/chat/u/0/#chat/welcom"><p><a href="click here"</a></p>
-<p><a href="mail">ID:_saiarjun1116@gmail.com</a></p>
 
+<p><a href="mail">ID:_saiarjun1116@gmail.com</a></p>
+<p><a href="https://mail.google.com/chat/u/0/#chat/welcom">Click here</a></p>
 
 <p><a href="mail">All_rights_reserved_2022</a></p>
 
