--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
      <h3>I am Sai Arjun</h3>
 
 
-<p><a href="mail">ID:_saiarjun1116@gmail.com</a></p>
+<h3>ID: saiarjun1116@gmail.com</h3>
 <p><a href="https://mail.google.com/chat/u/0/#chat/welcom">Click here</a></p>
 
-<p><a href="mail">All_rights_reserved_2022</a></p>
+
 
 
     </body>
