--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       
      </head>
      
-     <h1>Hi Friend</h1>
-     <h3>I am Sai Arjun</h3>
+     <strong>Hi Friend</strong>
+     <h1>I am Sai Arjun</h1>
 
 
-<h3>ID: saiarjun1116@gmail.com</h3>
-<p><a href="https://mail.google.com/chat/u/0/#chat/welcom">Click here</a></p>
+<h1>ID: saiarjun1116@gmail.com</h1>
+<t><a href="https://mail.google.com/chat/u/0/#chat/welcom">Click here</a></t>
 
 
 
