--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       
      </head>
      
-     <strong>Hi Friend</strong>
+     <h1>Hi Friend</h1>
      <h1>I am Sai Arjun</h1>
 
 
 <h1>ID: saiarjun1116@gmail.com</h1>
-<t><a href="https://mail.google.com/chat/u/0/#chat/welcom">Click here</a></t>
+<h1><a href="https://mail.google.com/chat/u/0/#chat/welcom">With the above ID Click here</a></h1>
 
 
 
