--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      </head>
      
      <h1>Hi Friend</h1>
-<h1>Welcome to web page</h1>
+<h1 style="color:Blue">Welcome to website.</h1>
      <h1>I am Sai Arjun</h1>
 
 
