--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      </head>
      
      <h1>Hi Friend</h1>
-<h1 style="color:Blue">Welcome to website.</h1>
+<h1 style="color:Blue">Welcome to the website.</h1>
      <h1>I am Sai Arjun</h1>
 
 
@@ -18,6 +18,9 @@
 <h1><a href="https://mail.google.com/chat/u/0/#chat/welcom">With the above ID Click here</a></h1>
 
 <h1><a href="https://mail.google.com">or Click here</a></h1>
+
+<p1>This is the official website of Sai Arjun</p1>
+<p1 style="color:Red">All Rights reserved</p1>
 
 
     </body>
