--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 <h1><a href="https://mail.google.com">or Click here</a></h1>
 
-<p1>This is the official website of Sai Arjun</p1>
-<p1 style="color:Red">All Rights reserved</p1>
+<p2 style="color:Red">All Rights reserved 2022</p2>
 
 
     </body>
