--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 
 <h1>ID: saiarjun1116@gmail.com</h1>
-<h1><a href="https://mail.google.com/chat/u/0/#chat/welcom">With the above ID Click here</a></h1>
+<h1><a href="https://mail.google.com/chat/u/0/#chat/welcom">Click to visit the main page</a></h1>
+
 
 <h1><a href="https://mail.google.com">or Click here</a></h1>
 
-<p2 style="color:Red">All Rights reserved 2022</p2>
+
 
 
     </body>
