--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <p1>Like anne frank (from the diary of anne frank) I was also looking for one true friend,but writing a diary is a tedious thing ever in this modern world, so I thought to have a friend like you....</p1>
  
-<p2>here is my mail ID you can text me through google chat</p2>
+<p2>here is my mail ID,Anything related to academics you can text me through google chat</p2>
 <h1>ID: saiarjun1116@gmail.com</h1>
 <h1><a href="https://mail.google.com/chat/u/0/#chat/welcom">https://chat.google.com/</a></h1>
  Click the above link to reply
