--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
 <p2>by the way,Anything related to academics you can text me through the following way</p2>
 
-<h1><a href="https://saiarjun111.github.io/in">https:/saiarjun.chat.org/</a></h1>
+<h1><a href="https://saiarjun111.github.io/in">https://saiarjun.chat.in/</a></h1>
  Click the above link to reply
 
 
